# flake2

./: .gitignore  Cargo.toml  a.out  generic.stderr  test.fl  test.fl.bc  type.stderr
compiler/flakec-ast/: Cargo.toml
compiler/flakec-ast/src/: expression.rs  item.rs  lib.rs  operator.rs  pass.rs  statement.rs  token.rs  types.rs  value.rs
compiler/flakec-backend/: Cargo.toml
compiler/flakec-backend-llvm/: Cargo.toml
compiler/flakec-backend-llvm/src/: codegen.rs  lib.rs  type.rs
compiler/flakec-backend/src/: dummy.rs  lib.rs  types.rs
compiler/flakec-codegen/: Cargo.toml
compiler/flakec-lexer/: Cargo.toml
compiler/flakec-lexer/src/: keyword.rs  lib.rs  literal.rs  span.rs  stream.rs  syn.rs  token.rs
compiler/flakec-middle/: Cargo.toml
compiler/flakec-middle/src/: lib.rs
compiler/flakec-parser/: Cargo.toml
compiler/flakec-parser-derive/: Cargo.toml
compiler/flakec-parser-derive/src/: lib.rs
compiler/flakec-parser/src/: lib.rs  lit.rs
compiler/flakec-types/: Cargo.toml
compiler/flakec-types/src/: infer.rs  lib.rs
src/: main.rs
