[package]
name = "flake-lang"
version = "0.1.0"
edition = "2021"
authors = ["Joscha Egloff"]

[workspace]
members = [ 
    "compiler/flakec-parser",
    "compiler/flakec-lexer",
    "compiler/flakec-parser-derive",
    "compiler/flakec-ast",
    "compiler/flakec-backend",
    "compiler/flakec-backend-llvm",
    "compiler/flakec-codegen",
    "compiler/flakec-middle",
    "compiler/flakec-types",
]

[dependencies.lexer]
package = "flakec-lexer"
path = "compiler/flakec-lexer"
features = ["flakec_dep_of_compiler", "use_const"]

[dependencies.parser]
package = "flakec-parser"
path = "compiler/flakec-parser"
features = ["flakec_dep_of_compiler"]

[dependencies.ast]
package = "flakec-ast"
path = "compiler/flakec-ast"
features = ["flakec_dep_of_compiler"]

[dependencies.llvm_backend]
package = "flakec-backend-llvm"
path = "compiler/flakec-backend-llvm"

[dependencies.flakec_backend]
package = "flakec-backend"
path = "compiler/flakec-backend"

[dependencies.types]
package = "flakec-types"
path = "compiler/flakec-types"
