[package]
name = "flakec-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.lexer]
package = "flakec-lexer"
path = "../flakec-lexer"
features = ["flakec_dep_of_compiler","use_const"]


[dependencies.ast]
package = "flakec-ast"
path = "../flakec-ast"

[features]
flakec_dep_of_compiler = []